--- a/book.bib
+++ b/book.bib
@@ -51,4 +51,33 @@
   edition = "12th"
 }
 
+@Book{BZdaniuk2014,
+  title = "Ordinary Least-Squares (OLS) Model.",
+  author = "Zdaniuk B.",
+  publisher = "Springer",
+  year = 2014,
+  url = "https://doi.org/10.1007/978-94-007-0753-5_2008"
+}
+
+@Book{LMRudner2001,
+  title = "Reliability",
+  author = "Rudner, L.M., & Shafer, W.D.",
+  publisher = "ERIC Digest",
+  year = 2001,
+  url = "https://psychology.wikia.org/wiki/Statistical_reliability"
+}
+
+
+@Manual{Domino2021,
+  title = "Factor Analysis",
+  author = "Domino",
+  publisher = "Domino",
+  year = 2021,
+  url = "https://www.dominodatalab.com/data-science-dictionary/factor-analysis"
+}
+
+
+
+
+
 
