--- a/book.bib
+++ b/book.bib
@@ -67,7 +67,6 @@
   url = "https://psychology.wikia.org/wiki/Statistical_reliability"
 }
 
-
 @Manual{Domino2021,
   title = "Factor Analysis",
   author = "Domino",
@@ -76,8 +75,18 @@
   url = "https://www.dominodatalab.com/data-science-dictionary/factor-analysis"
 }
 
+@Manual{JLee2020,
+  title = "SQL Cheat Sheet",
+  author = "Jason Lee",
+  publisher = "Towards Data Science",
+  year = 2020,
+  url = "https://towardsdatascience.com/sql-cheat-sheet-776f8e3189fa"
+}
 
 
 
 
-
+@misc{17real,
+	title = {17 real women share what it takes to land the job, grow your paycheck, and get ahead in your career},
+	url = {https://www.businessinsider.nl/career-promotion-raise-advice-women-2018-2?international=true&r=US}
+}
