--- a/02-Charts.Rmd
+++ b/02-Charts.Rmd
@@ -105,6 +105,16 @@ ggplot(data = ToothGrowth, aes(y = len, x = supp, colour=factor(supp))) +
          )
 ```
 
+```{r}
+library('palmerpenguins')
+library('ggplot2')
+
+ggplot(data=penguins, aes(x=flipper_length_mm, y=body_mass_g)) +
+  geom_point(aes(shape=species,color=species))+
+  facet_wrap(~species)
+```
+
+
 **Arrange charts next to each other on a page**
 
 ```{r}
